# ESP32-Demo

./: README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ds18b20_read.c  ds18b20_read.h  idf_component.yml  main.cpp  raindrop.c  raindrop.h  waterquality.c  waterquality.h  watersensor.c  watersensor.h  windspeed.c  windspeed.h
