idf_component_register(SRCS  "main.cpp" 
                             "raindrop.c"
                             "watersensor.c"
                             "ds18b20_read.c"
                             "waterquality.c"
                             "windspeed.c"
                    INCLUDE_DIRS ".")
